# swf-remote

./: .env.example  .gitignore  CLAUDE.md  README.md  setup-dev.sh  setup-server.sh
alarms/: README.md  config.toml.example  pyproject.toml
alarms/deploy/: crontab.example  install.sh
alarms/swf_alarms/: __init__.py  config.py  db.py  fetch.py  notify.py  run.py
alarms/swf_alarms/alarms/: __init__.py  panda_failure_rate_eic_all.py  panda_failure_rate_sakib.py
alarms/swf_alarms/checks/: __init__.py  failure_rate.py
alarms/swf_alarms/lib/: __init__.py  failure_rate.py
deploy/: epic-devcloud.conf  setup-apache.sh  swf-remote-tunnel.service  update_from_dev.sh
docs/: alarms.md
requirements/: base.txt
src/: manage.py
src/remote_app/: alarm_views.py  alarms_data.py  alarms_reader.py  apps.py  models.py  monitor_client.py  signals.py  urls.py  views.py
src/remote_app/management/commands/: sync_users.py
src/remote_app/migrations/: 0001_initial.py  0002_seed_alarms.py  0003_seed_teams.py  0004_purge_workinggroup.py  0005_drop_alarm_kind.py  0006_rename_days_window.py
src/remote_app/static/css/: state-colors.css  style.css
src/remote_app/templates/monitor_app/: _nav_auth.html  account.html  alarm_config_edit.html  alarm_detail.html  alarm_event_detail.html  alarm_run_report.html  alarm_task_history.html  alarms.html  team_edit.html
src/remote_app/templatetags/: swf_fmt.py
src/swf_remote_project/: expire_old_cookies.py  settings.py  urls.py  wsgi.py  wsgi_subpath.py
src/templates/: base.html
src/templates/monitor_app/: panda_hub.html
src/templates/registration/: login.html  password_change_done.html  password_change_form.html
