[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "swf-alarms"
version = "0.1.0"
description = "Historical swf-remote alarm engine retained for rollback/reference. Live alarms moved to swf-monitor."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "boto3>=1.34",
    "psycopg[binary]>=3.1",
]

[project.scripts]
swf-alarms-run = "swf_alarms.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["swf_alarms*"]
